IATI Schema Changes -*-Outline-*-

* Next release

[*] designates a backwards-incompatible change

- removed documentation references to obsolete draft of standard

** Activities

- [*] correct content model for conditions/condition, which previously
  was hidden by misplaced xsd:annotation element (Redmine issue #72)

- [*] added explicit content type for contact-info/organisation

- in documentation, no longer specify default for optional
  iati-activities/@version attribute

- add optional transaction/description element

- make budget/@type, budget/period-start/@iso-date, and
  budget/period-end/@iso-date optional

- make planned-disbursement/period-start/@iso-date and
  planned-disbursement/period-end/@iso-date optional

- make participating-org/@type optional again

- make activity-status/@code optional again

- [*] remove location/description/@type

- make location/coordinates/@precision optional

- [*] change activity-date/@iso-date, budget/period-start/@iso-date,
  planned-disbursement/period-start/@iso-date,
  planned-disbursement/period-end/@iso-date,
  budget/period-end/@iso-date, transaction/transaction-date/@iso-date,
  planned-disbursement/value/@value-date, budget/value/@value-date,
  and transaction/value/@value-date to use xsd:date rather than
  xsd:dateTime (e.g. "2011-06-01" instead of previous
  "2011-06-01T12:00:00Z").


** Organisations

- made recipient-org-budget/recipient-org/@ref optional again

- added top-level iati-organisations element, similar to
  iati-activies, to allow multiple organisation records in a single
  file

- added reporting-org to iati-organisations, to allow reporting by an
  organisation other than the one being described

- [*] change total-budget/period-start/@iso-date,
  recipient-org-budget/period-start/@iso-date,
  recipient-country-budget/period-start/@iso-date,
  total-budget/period-end/@iso-date,
  recipient-country-budget/period-end/@iso-date,
  recipient-org-budget/period-end/@iso-date,